Updated analyzers and implemented new enclosing code unit logic